--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -12,7 +12,7 @@
     "title": "Lastly, before we begin...",
     "subtitle": "To reduce risk and self-harm, we advise you to:",
     "advise1": "Please use your own device and wear a mask when appropiate.",
-    "advise2": "Disinfect your device and any affected or nearby surfaces after recording your cough/speech.",
+    "advise2": "Disinfect your device and any affected or nearby surfaces after recording your cough.",
     "advise3": "If you have an underlying condition that increases your risk from coughing, please check with your health care provider before participating.",
     "advise4": "If you feel your symptoms are getting worse, please contact your local medical response.",
     "startButton": "Start"
@@ -23,10 +23,6 @@
       "intro1": "Please cough away from others around you! If you are feeling ill, please sit down.",
       "intro2": " In a quiet environment, please press record and intentionally cough around 3-5 times."
     },
-    "recordSpeech": {
-      "header": "Record your speech",
-      "intro1": "The sound of your voice can also help us learn what COVID sounds like! 'Please press record and count clearly from one to ten."
-    },
     "next": "OK",
     "releaseButtonStart": "Release to start recording",
     "releaseButtonStop": "Release to stop recording",
@@ -35,9 +31,6 @@
   "recordingsRecord": {
     "recordCough": {
       "header": "Record your cough"
-    },
-    "recordSpeech": {
-      "header": "Record your speech"
     },
     "next": "Done",
     "delete": "Delete",
@@ -61,10 +54,6 @@
       "header": "Record your cough",
       "intro1": "Please cough away from others around you! If you are feeling ill, please sit down.",
       "intro2": " In a quiet environment, please press record and intentionally cough around 3-5 times."
-    },
-    "recordSpeech": {
-      "header": "Record your speech",
-      "intro1": "The sound of your voice can also help us learn what COVID sounds like! 'Please press record and count clearly from one to ten."
     },
     "title": "Recording uploaded",
     "subtitle": "Feel free to take a listen.",
