--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -12,7 +12,7 @@
     "title": "Por último, antes de começarmos...",
     "subtitle": "Para reduzir o risco e a automutilação, recomendamos que você:",
     "advise1": "Por favor, use seu próprio dispositivo e use uma máscara quando apropriado.",
-    "advise2": "Desinfecte seu dispositivo e qualquer superfície afetada ou próxima após a gravação da sua tosse/fala.",
+    "advise2": "Desinfecte seu dispositivo e qualquer superfície afetada ou próxima após a gravação da sua tosse.",
     "advise3": "Se você possuir qualquer condição que aumente seus riscos ao tossir, por favor, entre em contato com seu médico antes de participar.",
     "advise4": "Se você perceber que seus sintomas estão piorando, por favor, busque imediatamente por um atendimento médico local",
     "startButton": "Começar"
@@ -24,10 +24,6 @@
       "intro1": "Por favor, tussa longe de pessoas ao seu redor! Caso esteja se sentindo doente, por favor, sente-se.",
       "intro2": "Em um ambiente silencioso, por favor, pressione o botão gravar e tussa intencionalmente cerca de 3 a 5 vezes."
     },
-    "recordSpeech": {
-      "header": "Gravar sua fala",
-      "intro1": "O som da sua voz pode nos ajudar a aprender como a COVID soa! Por favor, pressione o botão gravar e conte claramente de um a dez."
-    },
     "next": "Próximo",
     "releaseButtonStart": "Lançamento para iniciar a gravação",
     "releaseButtonStop": "Liberação para parar a gravação",
@@ -36,9 +32,6 @@
   "recordingsRecord": {
     "recordCough": {
       "header": "Gravar sua tosse"
-    },
-    "recordSpeech": {
-      "header": "Gravar sua fala"
     },
     "next": "Continuar",
     "delete": "Deletar",
@@ -62,10 +55,6 @@
       "header": "Gravar sua tosse",
       "intro1": "Por favor, tussa longe de outras pessoas ao seu redor! Caso esteja se sentindo doente, por favor, sente-se.",
       "intro2": "Em um ambiente silencioso, por favor, pressione o botão gravar e tussa intencionalmente cerca de 3 a 5 vezes."
-    },
-    "recordSpeech": {
-      "header": "Gravar sua fala",
-      "intro1": "O som da sua voz pode nos ajudar a aprender como a COVID soa! Por favor, pressione o botão gravar e conte claramente de um a dez."
     },
     "title": "Gravação enviada",
     "subtitle": "Fique à vontade para ouvir",
