--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -66,7 +66,7 @@
     "processingTitle": "Procesando",
     "predictionResultTitle": "Resultado de la Predicción",
     "likelihoodPrefix": "Su probabilidad de COVID-19 es",
-    "nextButton": "Submir otra tos"
+    "nextButton": "Subir otra tos"
   },
   "footerReportProblems": {
     "message": "¿Algo mal? Reportar un problema"
