--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,8 +65,11 @@
   "predictionResult": {
     "processingTitle": "Processing",
     "predictionResultTitle": "Prediction Result",
-    "likelihoodPrefix": "Your likelihood of COVID-19 is",
-    "nextButton": "Submit another cough"
+    "likelihoodPrefix": "COVID-19 result:",
+    "nextButton": "Submit another cough",
+    "submitError": "An error occurred. Please try again.",
+    "result_positive": "Positive",
+    "result_negative": "Negative"
   },
   "footerReportProblems": {
     "message": "Something wrong? Report an error"
