--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,7 @@
     "paragraph2": "Our study is currently only open to people within the below countries and/or territories. Please confirm that you are within one of these locations.",
     "selectCountry": "Select country",
     "selectRegion": "Select region",
-    "introductionText": "<strong>Important note:</strong> this app is only for demonstration purposes and does not provide a prediction. Please visit <2>virufy.org/app</2> to contribute your cough and help us to complete this app.",
+    "introductionText": "<strong>Important note:</strong> This app is only for demonstration purposes and does not provide a prediction. Please visit <2>Virufy Study</2> to contribute your cough and help us to complete this app.",
     "introductionRecomendations": "<strong>To reduce risk and self-harm, we advise you to:</strong><p>Please use your own device and wear a mask when appropriate.</p><p>Disinfect your device and any affected or nearby surfaces after recording your cough/speech.</p><p>If you have an underlying condition that increases your risk from coughing, please check with your health care provider before participating.</p><p>If you feel your symptoms are getting worse, please contact your local medical response.</p>",
     "hospitalCodeLabel": "Hospital code",
     "patientIdLabel": "Patient ID",
@@ -38,8 +38,8 @@
     "recordCough": {
       "header": "Record your cough",
       "title": "Instructions",
-      "intro1": "Please cough away from others around you! If you are feeling ill, please sit down.",
-      "intro2": "In a quiet environment, please press record and intentionally cough around 3-5 times."
+      "intro1": "Find a quiet environment at least 20 feet away from others. If you are feeling ill, please sit down.",
+      "intro2": "Hold your device near your face and cough into your elbow to prevent virus spread. Do not cough violently or too forcefully."
     },
     "next": "Next",
     "releaseButtonStart": "Release to start recording",
@@ -52,7 +52,7 @@
     },
     "next": "Continue",
     "delete": "Delete",
-    "text": "Click the record button and cough intentionally 3 to 5 times <strong>during 3 seconds minimum</strong>. When you are done, click Continue.",
+    "text": "Click the record button and cough intentionally <strong>3 times</strong>. When you are done, click <3></3> and Continue.",
     "textCount": "Click the record button and count clearly from one to ten. When you are done, click continue.",
     "upload": "Upload your own file"
   },
